# Triskar3

./: .gitignore  README.md  status.py
odometry_publisher/src/: odometry_publisher.cpp
triskar/: CMakeLists.txt  package.xml
triskar/include/triskar/: EuleroOdometry.h  Odometry.h  PathPublisher.h  RungeKutta4Odometry.h
triskar/launch/: demo_odometry.launch  demo_path.launch  path_publishers.yaml  teleop_joy.launch  teleop_keyboard.launch  triskar.launch  triskar_minimal.launch  triskarone.launch
triskar/params/: pixy.yaml  teleop.yaml  teleop_triskarone.yaml
triskar/src/: EuleroOdometry.cpp  Odometry.cpp  OdometryNode.cpp  PathNode.cpp  PathPublisher.cpp  PixyDemo.cpp  PixyPublisher.cpp  PixyTeleop.cpp  RandomExploration.cpp  RungeKutta4Odometry.cpp  odometry.cpp  odometry_eulero.cpp  odometry_runge_kutta.cpp
triskar/src/triskar/: status.py
triskar/udev/: 50-triskar.rules
triskar_msgs/: CMakeLists.txt
triskar_msgs/msg/: IR.msg
